fix(Time): value align left

--- a/src/Routes/Demo/TodoList/Loader/Success/TaskListItem/Time/style.less
+++ b/src/Routes/Demo/TodoList/Loader/Success/TaskListItem/Time/style.less
@@ -20,6 +20,10 @@
         }
       }
 
+      .value {
+        text-align: left;
+      }
+
       @media (min-width: 640px) {
         grid-template-columns: repeat(2, [col-start] auto);
 
